--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,13 +1,15 @@
-<section class='file'>
-  <div class="section-wrap">
-    <h2>Upload or drop a file</h2>
-    <%= render 'image_subjects/form' %>
-  </div>
-</section>
-<section class="paste">
-  <div class="section-wrap">
-    <h2>Paste some text</h2>
-    <%= render 'text_subjects/form' %>
-  </div>
-</section>
-<div class="or"><h3>OR</h3></div>
+<div class="dashboard-wrap">
+  <section class='file'>
+    <div class="section-wrap">
+      <h2>Upload a file</h2>
+      <%= render 'image_subjects/form' %>
+    </div>
+  </section>
+  <section class="paste">
+    <div class="section-wrap">
+      <h2>Paste some text</h2>
+      <%= render 'text_subjects/form' %>
+    </div>
+  </section>
+  <div class="or"><h3>OR</h3></div>
+</div>
