--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
-<div class="text_field">
+<div class="field">
   <%= form.text_field :email, :type => "email", placeholder: 'Email' %>
 </div>
-<div class="password_field">
+<div class="field">
   <%= form.password_field :password, placeholder: 'Password' %>
 </div>
