--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,7 @@
 @import 'base-mixins';
 @import 'base-vars';
 @import 'soapbox';
-@import 'solarized_dark';
+@import 'brightey';
 @import 'global';
 @import 'dashboard';
 @import 'discussions';
