--- a/app/views/image_subjects/_image_subject.html.erb
+++ b/app/views/image_subjects/_image_subject.html.erb
@@ -1,1 +1,3 @@
-<%= image_tag image_subject.image, alt: 'subject' %>
+<div class="image-wrapper">
+  <%= image_tag image_subject.image, alt: 'subject' %>
+</div>
