--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,6 @@
-<li><strong class='user-number-<%= message.user_number %>'><%= message.user_name %></strong><span><%= message.content %></span></li>
+<li>
+  <strong class='user-number-<%= message.user_number %>'>
+    <%= message.user_name %>
+  </strong>
+  <span><%= message.content %></span>
+</li>
