--- a/app/views/discussions/_chat.html.erb
+++ b/app/views/discussions/_chat.html.erb
@@ -14,7 +14,8 @@
 
   <% if current_user.has_full_name? %>
     <%= form_for @message, url: discussion_messages_path(@discussion), remote: true do |f| %>
-      <%= f.text_area :content, placeholder: 'Your message here', class: "user-number-#{@discussion.user_number(current_user.full_name)}" %>
+      <%= f.text_area :content, placeholder: 'Your message here',
+        class: ("user-number-#{@current_user_number}" if @current_user_number) %>
     <% end %>
   <% else %>
     <section class="guest-form">
