Adding a file shows filename on dashboard

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :javascript do %>
+  <%= javascript_include_tag 'dashboard/dashboard' %>
+<% end %>
+
 <div class="dashboard-wrap">
   <section class='file'>
     <div class="section-wrap">
