--- a/app/views/image_subjects/_form.html.erb
+++ b/app/views/image_subjects/_form.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class='field'>
     <label class="file">
-      Upload a file
+      <span>Upload a file</span>
       <%= form.file_field :image %>
     </label>
   </div>
