--- a/app/views/image_subjects/_image_subject.html.erb
+++ b/app/views/image_subjects/_image_subject.html.erb
@@ -1,3 +1,4 @@
+<%= link_to 'raw', image_subject.image.url %>
 <div class="subject-wrapper">
   <%= image_tag image_subject.image, alt: 'subject' %>
 </div>
