Added toolbar for discussion actions

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -68,7 +68,7 @@ body.discussions-show {
       background: $bg-shade-8;
       @include box-sizing(border-box);
       color: $bg-shade-2;
-      padding: 20px;
+      padding: 20px 10px 10px 20px;
       @include position(absolute, 0px flex-grid(8) 0px 0px);
       width: flex-grid(8);
 
@@ -79,12 +79,27 @@ body.discussions-show {
         white-space: nowrap;
       }
 
-      p.share {
-        a {
-          @include mini-button($bright-color-1);
-          border: none;
-          color: $black;
-          text-decoration: none;
+      ul.toolbar {
+        font-size: 0px;
+        margin-top: 20px;
+        text-align: right;
+
+        li {
+          display: inline;
+          font-size: $font-size-small;
+          margin-left: 4px;
+
+          a {
+            @include mini-button($bright-color-1);
+
+            &.share {
+              border-color: $bright-color-2;
+            }
+
+            &.raw {
+              border-color: $bright-color-3;
+            }
+          }
         }
       }
 
@@ -106,6 +121,18 @@ body.discussions-show {
           @include box-sizing(border-box);
           max-width: 100%;
           padding: 10px;
+        }
+
+        a.raw {
+          display: none;
+        }
+
+        &:hover {
+          a.raw {
+            display: inline;
+            @include mini-button($bright-color-2);
+            @include position(absolute, 0px 0px 0 0);
+          }
         }
       }
     }
