Use different ids for discussion_name fields on dashboard page

--- a/app/views/image_subjects/_form.html.erb
+++ b/app/views/image_subjects/_form.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 
   <div class='field'>
-    <%= text_field_tag 'discussion_name', nil, placeholder: "Name your discussion" %>
+    <%= text_field_tag 'image_discussion_name', nil, placeholder: "Name your discussion" %>
   </div>
   <div class='field'>
     <label class="file">
