--- a/app/views/text_subjects/_form.html.erb
+++ b/app/views/text_subjects/_form.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 
   <div class='field'>
-    <%= text_field_tag 'discussion_name', nil, placeholder: "Name your discussion" %>
+    <%= text_field_tag 'text_discussion_name', nil, placeholder: "Name your discussion" %>
   </div>
   <div class='field'>
     <%= form.select :language, TextSubject::AVAILABLE_LANGUAGES %>
