--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -5,9 +5,12 @@ body.pages-show {
     margin-top: $top-space;
 
     h1 {
+      background: transparent url('logo-large.png') no-repeat center center;
       color: $bg-shade-7;
       font-size: 60px;
+      height: 115px;
       text-align: center;
+      text-indent: -999999px;
     }
 
     p {
@@ -54,8 +57,6 @@ body.clearance-sessions-new {
 
   ul li a {
     text-decoration: none;
-//    @include mini-button($bright-color-5);
-//    border-top: none;
   }
 }
 
