--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -47,7 +47,7 @@ body {
 
 header {
   nav {
-    background: $bg-nav url('logo-small.png') no-repeat 20px 9px;
+    background: $bg-nav;
     height: $header-height;
 
     div.nav-wrap {
@@ -58,14 +58,15 @@ header {
         text-decoration: none;
 
         &.brand {
-          display: none;
+          background: transparent url('logo-small.png') no-repeat;
           color: $bg-shade-7;
           font-size: $font-size-huge;
           font-style: italic;
           font-weight: bold;
           letter-spacing: -.05em;
           @include position(absolute, 8px 0 0 20px);
-
+          text-indent: -500px;
+          width: 153px;
         }
       }
 
