--- a/app/assets/stylesheets/_base-vars.css.scss
+++ b/app/assets/stylesheets/_base-vars.css.scss
@@ -8,12 +8,12 @@ $fg-max-columns: 12;
 $header-height: 49px;
 $min-width: 1000px;
 
-$font-size-tiny: 11px;
-$font-size-small: 12px;
-$font-size-med: 14px;
+$font-size-small-2: 11px;
+$font-size-small-1: 12px;
+$font-size-small: 14px;
 $font-size-base: 16px;
-$font-size-large: 20px;
-$font-size-huge: 30px;
+$font-size-base-1: 20px;
+$font-size-base-2: 30px;
 
 // Site colors
 $black: #222;
