--- a/app/assets/stylesheets/_base-vars.css.scss
+++ b/app/assets/stylesheets/_base-vars.css.scss
@@ -1,3 +1,4 @@
+// Grid Dimentions
 $gw-column: 65px;
 $gw-gutter: 20px;
 
@@ -5,11 +6,18 @@ $fg-column: 65px;
 $fg-gutter: 20px;
 $fg-max-columns: 12;
 
+// Dimentions
 $header-height: 49px;
 $min-width: 1000px;
 
+// Type faces
+$base-faces: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$nimbus: "nimbus-sans", $base-faces;
+$global-face: $nimbus;
+
+// Font sizes
 $font-size-small-2: 11px;
-$font-size-small-1: 12px;
+$font-size-small-1: 13px;
 $font-size-small: 14px;
 $font-size-base: 16px;
 $font-size-base-1: 20px;
@@ -20,7 +28,6 @@ $black: #222;
 $grey: #444;
 $white: #fff;
 
-//$bg-color: #EDEDED;
 $bg-color: #fff;
 $bg-shade-1: #F5F5F5;
 $bg-shade-2: #E9E9E9;
@@ -31,6 +38,7 @@ $bg-shade-6: #A3A3A3;
 $bg-shade-7: #6B6B6B;
 $bg-shade-8: #2F2F2F;
 
+// Accent Colors
 $bright-color-1: #EE6364; // red
 $bright-color-2: #FD8A33; // orange
 $bright-color-3: #E4BA2C; // gold
@@ -39,6 +47,7 @@ $bright-color-5: #62B6E0; // blue
 $bright-color-6: #B080CC; // purple
 $bright-color-7: #E76D9B; // pink
 
+// Other Vars
 $bg-middle-box: $bg-shade-4;
 $bg-nav: $bg-shade-3;
 $bg-button: $bg-shade-2;
