--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,3 +1,7 @@
+*::selection {
+  background: rgba(0,0,0,0.2);
+}
+
 html, body {
   height: 100%;
 }
@@ -5,13 +9,18 @@ html, body {
 body {
   background: $bg-color;
   color: $text-color;
-  font-family: $helvetica;
+  font-family: $global-face;
   min-width: $min-width;
 
   a,
   a:link,
   a:visited {
     color: $bg-shade-7;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    font-family: $global-face;
+    font-weight: 600;
   }
 
   ul {
