Changed the Logo's to be html instead of an image

--- a/app/assets/stylesheets/_base-vars.css.scss
+++ b/app/assets/stylesheets/_base-vars.css.scss
@@ -13,6 +13,7 @@ $min-width: 1000px;
 // Type faces
 $base-faces: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $nimbus: "nimbus-sans", $base-faces;
+$proxima: "proxima-nova", $base-faces;
 $global-face: $nimbus;
 
 // Font sizes
