--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,6 @@
 <% content_for :javascript do %>
+  <%= javascript_include_tag 'jquery.ui.widget' %>
+  <%= javascript_include_tag 'jquery.fileupload' %>
   <%= javascript_include_tag 'dashboard/dashboard' %>
 <% end %>
 
