Fix issue with multiple previews being rendered

--- a/app/views/image_subjects/_form.html.erb
+++ b/app/views/image_subjects/_form.html.erb
@@ -14,7 +14,9 @@
     </label>
   </div>
 
-  <div class="drop" id="file-drop"></div>
+  <div class="drop" id="file-drop">
+    <div id='file-preview'></div>
+  </div>
 
   <%= number_field_tag :image_subject_id %>
 
