--- a/app/assets/stylesheets/_soapbox.css.scss
+++ b/app/assets/stylesheets/_soapbox.css.scss
@@ -93,6 +93,7 @@ a.button {
   font-size: $font-size-base;
   margin-top: 24px;
   padding: 5px 16px 6px;
+  text-decoration: none;
 
   &:hover {
     background: $bg-shade-1;
