--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,12 +1,11 @@
 <% content_for :javascript do %>
   <%= javascript_include_tag 'discussions/discussion' %>
+  <%= javascript_include_tag 'ZeroClipboard' %>
 <% end %>
 
 <section class='view'>
   <h2 data-role="discussion-name"><%= @discussion.name %></h2>
   <ul class="toolbar">
-    <li style="display: none;"><%= url_for discussion_url(@discussion) %></li>
-    <li><%= link_to "Share", @discussion, class: 'share' %></li>
     <li><%= link_to_raw_subject(@discussion.subject) %></li>
   </ul>
   <%= render @discussion.subject %>
