--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -68,21 +68,22 @@ body.discussions-show {
       background: $bg-shade-8;
       @include box-sizing(border-box);
       color: $bg-shade-2;
-      padding: 20px 10px 10px 20px;
+      padding: 20px;
       @include position(absolute, 0px flex-grid(8) 0px 0px);
       width: flex-grid(8);
 
       h2 {
         color: $bg-shade-2;
         overflow: hidden;
+        margin-bottom: 0;
+        @include position(absolute, 14px (79px + 20px) 0 20px);
         text-overflow: ellipsis;
         white-space: nowrap;
       }
 
       ul.toolbar {
+        float: right;
         font-size: 0px;
-        margin-top: 17px;
-        text-align: right;
 
         li {
           display: inline;
@@ -90,11 +91,8 @@ body.discussions-show {
           margin-left: 4px;
 
           a {
-            @include mini-button($bright-color-1);
-
-            &.share {
-              border-color: $bright-color-2;
-            }
+            @include med-button($bright-color-1);
+            padding: 2px 10px 2px;
 
             &.raw {
               border-color: $bright-color-3;
@@ -107,7 +105,7 @@ body.discussions-show {
         background: $bg-shade-1;
         margin: 20px 0 0 0;
         overflow: scroll;
-        @include position(absolute, 70px 10px 10px 20px);
+        @include position(absolute, 32px 20px 20px 20px);
         text-align: center;
 
         code {
@@ -140,175 +138,5 @@ body.discussions-show {
         }
       }
     }
-
-    section.chat {
-      $textarea-height: 120px;
-
-      background: $bg-shade-1;
-      @include position(absolute, 0px 0px $textarea-height flex-grid(8));
-
-      div#chat-container {
-
-        @include position(absolute, 0px 0px 0px 0px);
-        overflow: scroll;
-
-        ul#messages {
-          list-style: none;
-          margin: 0;
-          padding: 10px;
-
-          li {
-            $name-width: 90px;
-            $padding: 3px;
-
-            clear: both;
-            color: $black;
-            margin: 0 0 3px 0;
-            padding: 1px 5px 1px 0px;
-
-            &:last-child {
-              margin: 0;
-            }
-
-            &.unsent {
-              opacity: 0.5;
-            }
-
-            &#template-message {
-              display: none;
-            }
-
-            strong {
-              background: $bg-shade-3;
-              color: $black;
-              display: block;
-              float: left;
-              font-size: $font-size-small-1;
-              font-weight: 500;
-              overflow: hidden;
-              padding: $padding 5px $padding $padding;
-              text-align: right;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-              width: $name-width;
-
-              &.user-number-0 { @include chat-color($bright-color-1); }
-              &.user-number-1 { @include chat-color($bright-color-2); }
-              &.user-number-2 { @include chat-color($bright-color-3); }
-              &.user-number-3 { @include chat-color($bright-color-4); }
-              &.user-number-4 { @include chat-color($bright-color-5); }
-              &.user-number-5 { @include chat-color($bright-color-6); }
-              &.user-number-6 { @include chat-color($bright-color-7); }
-            }
-
-            .user-number-0 { color: $bright-color-1; }
-            .user-number-1 { color: $bright-color-2; }
-            .user-number-2 { color: $bright-color-3; }
-            .user-number-3 { color: $bright-color-4; }
-            .user-number-4 { color: $bright-color-5; }
-            .user-number-5 { color: $bright-color-6; }
-            .user-number-6 { color: $bright-color-7; }
-
-            span {
-              display: block;
-              margin-left: $name-width + 15px;
-              padding-top: $padding;
-            }
-          }
-        }
-
-        form {
-          line-height: 0;
-          @include position(fixed, 0 0px 0px flex-grid(8));
-
-          @media screen and (max-width: 1000px) {
-            left: 660px;
-            width: 340px;
-          }
-
-          textarea {
-            background: $bg-shade-2;
-            border-top: $top-color-border-width solid $bg-shade-6;
-            height: $textarea-height;
-            margin: 0;
-            max-height: $textarea-height;
-            max-width: 100%;
-            padding: 10px 20px 10px 10px;
-            width: 100%;
-
-            &.user-number-0 { border-color: $bright-color-1; }
-            &.user-number-1 { border-color: $bright-color-2; }
-            &.user-number-2 { border-color: $bright-color-3; }
-            &.user-number-3 { border-color: $bright-color-4; }
-            &.user-number-4 { border-color: $bright-color-5; }
-            &.user-number-5 { border-color: $bright-color-6; }
-            &.user-number-6 { border-color: $bright-color-7; }
-          }
-        } // form
-
-        section.guest-form {
-          form#new_name {
-            background: $bg-shade-2;
-            border-top: $top-color-border-width solid $bg-shade-6;
-            height: $textarea-height;
-            padding: 10px;
-
-            p {
-              font-size: $font-size-small;
-              margin-bottom: 30px;
-              padding-left: 5px;
-
-              a {
-                background: $bg-shade-1;
-                border-top: $top-border-mini-width solid $bright-color-5;
-                text-decoration: none;
-                padding: 2px 5px 3px 5px;
-
-                &:hover {
-                  background: $white;
-                };
-              }
-            }
-
-            div.control-group {
-              @include box-sizing(border-box);
-              float: left;
-              margin-right: flex-gutter();
-              width: flex-grid(7);
-
-              &.first {
-                display: none;
-              }
-
-              input {
-                background: $bg-shade-1;
-                width: 100%;
-
-                &:focus {
-                  background: $white;
-                }
-              }
-            }
-
-            div.form-actions {
-              float: left;
-              width: flex-grid(5);
-
-              input[type=submit] {
-                background: $bg-shade-1;
-                border-color: $bright-color-4;
-                margin: 0;
-                padding: 5px 0 6px;
-                width: 100%;
-
-                &:hover {
-                  background: $white;
-                }
-              }
-            }
-          }
-        }
-      } // div#chat-container
-    } // section.chat
   } // div.main-wrap
 } // body.discussions-show
