--- a/app/views/discussions/_chat.html.erb
+++ b/app/views/discussions/_chat.html.erb
@@ -5,16 +5,27 @@
     <%= tag :meta, name: 'discussion_url', content: @discussion.url %>
     <%= tag :meta, name: 'current_user_id', content: user_or_guest_id %>
     <%= javascript_include_tag 'discussions/chat' %>
+    <%= javascript_include_tag 'discussions/copy' %>
   <% end %>
 
   <ul id="messages">
-    <li id='template-message' data-user-name='<%= current_user.name %>' data-user-number='<%= @discussion.user_number(current_user.name) %>'><strong class='unsent'></strong><span></span></li>
-    <%= render @messages %>
+      <li id='template-message' data-user-name='<%= current_user.name %>' data-user-number='<%= @discussion.user_number(current_user.name) %>'><strong class='unsent'></strong><span></span></li>
+      <%= render @messages %>
+    <% if @messages.empty? %>
+      <div class="share">
+        <p>This is where you'll be chatting.</p>
+        <p>To get others in on the conversation, give them this link:</p>
+        <div class="copy-url">
+          <%= text_field_tag 'discussion-url', discussion_url(@discussion), disabled: true %>
+          <div id="copy-wrapper"><a class="button" id="copy-button">Copy</a></div>
+        </div>
+      </div>
+    <% end %>
   </ul>
 
   <% if current_user.has_name? %>
     <%= form_for @message, url: discussion_messages_path(@discussion), remote: true do |f| %>
-      <%= f.text_area :content, placeholder: 'Your message here',
+    <%= f.text_area :content, placeholder: 'Speak your mind',
         class: ("user-number-#{@current_user_number}" if @current_user_number) %>
     <% end %>
   <% else %>
