--- a/app/views/image_subjects/_form.html.erb
+++ b/app/views/image_subjects/_form.html.erb
@@ -14,8 +14,8 @@
     </label>
   </div>
 
-  <div class="drop" id="file-drop">
-    <div id='file-preview'></div>
+  <div id="file-drop">
+    <!-- <div id='file-preview'></div> -->
   </div>
 
   <%= number_field_tag :image_subject_id %>
